Closed Bug 54353 Opened 24 years ago Closed 23 years ago

NSPR does not clean up logModules in prlog.c

Categories

(NSPR :: NSPR, defect, P3)

4.0.2
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jonsmirl, Assigned: wtc)

References

Details

Attachments

(1 file)

PR_Cleanup() should be enhanced to cleanup memory allocated in prlog.c to hold 
the list of logModules. Alternatively a DestroyLog function could be added. 
Currently all entries on the logModules list are memory leaks.
Blocks: 54352
setting Jon Smirl's bugs to New
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Target Milestone: --- → 4.2
*** Bug 94113 has been marked as a duplicate of this bug. ***
Fix checked in on the tip of NSPR.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: