Bugzilla bug 54353: free the log modules at NSPR cleanup.  Thanks to jeff@NerdOne.com for the patch.